--- a/demo/app.component.scss
+++ b/demo/app.component.scss
@@ -167,6 +167,11 @@ main {
     input[type=text],
     select {
       width: 100%;
+      
+      &.zoomToNode {
+        width: 150px;
+        height: 22px;
+      }
     }
 
     h3 {
