Adding new user template in order to show UI data on the link

--- a/demo/app.component.scss
+++ b/demo/app.component.scss
@@ -267,6 +267,21 @@ main {
     }
   }
 
+  .linkDataUI {
+    ellipse {
+      fill:white;
+      stroke: black;
+      stroke-width: 1;
+    }
+
+    text {
+      stroke: transparent;
+      fill:black;
+      text-anchor: middle; 
+      font-size: 10px;
+    }
+  }
+
   .arrow-head {
     fill: #666;
   }
