Remove extra bracket

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -63,8 +63,7 @@
 
     <div class="sidebar-body">
       <h3>Theme</h3>
-      <select [ngModel]="theme" (ngModelChange)="theme = $event"
-        >>
+      <select [ngModel]="theme" (ngModelChange)="theme = $event">
         <option [value]="'dark'">Dark</option>
         <option [value]="'light'">Light</option>
       </select>
