Support in multi graph option in order to display multiple links from the same nodes.

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -23,6 +23,7 @@
         [zoomToFit$]="zoomToFit$"
         [zoomToNode$]="zoomToNode$"
         [center$]="center$"
+        [multigraph]="enableMultiEdges"
         (zoomChange)="onZoom($event)"
         (select)="select($event)"
       >
@@ -186,6 +187,7 @@
         <button class="btn btn-default" (click)="center()">Center</button>
         <button class="btn btn-default" (click)="zoomToFit()">Fit in view</button>
         <button class="btn btn-default" (click)="updateChart()">Update</button>
+        <button class="btn btn-default" (click)="updateGraphWithMultiEdges()">Multi Edge</button>
       </div>
     </div>
   </div>
