--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
@@ -25,6 +25,7 @@
         [attr.id]="link.id"
       ></svg:path>
     </defs>
+
     <svg:rect
       class="panning-rect"
       [attr.width]="dims.width * 100"
@@ -32,6 +33,9 @@
       [attr.transform]="'translate(' + (-dims.width || 0) * 50 + ',' + (-dims.height || 0) * 50 + ')'"
       (mousedown)="isPanning = true"
     />
+
+    <ng-content></ng-content>
+
     <svg:g class="clusters">
       <svg:g
         #clusterElement
@@ -58,6 +62,7 @@
         </svg:g>
       </svg:g>
     </svg:g>
+
     <svg:g class="links">
       <svg:g #linkElement *ngFor="let link of graph.edges; trackBy: trackLinkBy" class="link-group" [id]="link.id">
         <ng-template
@@ -68,6 +73,7 @@
         <svg:path *ngIf="!linkTemplate" class="edge" [attr.d]="link.line" />
       </svg:g>
     </svg:g>
+
     <svg:g class="nodes">
       <svg:g
         #nodeElement
