adding animations to links and nodes

--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
@@ -79,6 +79,7 @@
         #nodeElement
         *ngFor="let node of graph.nodes; trackBy: trackNodeBy"
         class="node-group"
+        [class.old-node]="animate && oldNodes.has(node.id)"
         [id]="node.id"
         [attr.transform]="node.transform"
         (click)="onClick(node)"
