Contains the following:
1. Adding new template section for graphs examples that build on ngx-graph.
2. Adding an organization tree graph based on ngx-graph.
3. Fix a bug of multi graph with layouts.
4. Adding a dragging functionality to the custom curve example

--- a/src/docs/demos/components/ngx-graph-custom-curve/ngx-graph-custom-curve.component.html
+++ b/src/docs/demos/components/ngx-graph-custom-curve/ngx-graph-custom-curve.component.html
@@ -4,6 +4,5 @@
   [links]="links"
   [nodes]="nodes"
   [layout]="layout"
-  [curve]="curve"
-  [draggingEnabled]="false">
+  [curve]="curve">
 </ngx-graph>
