Update midpoint UI to be updated on drag + update org tree example with mid point UI

--- a/src/docs/demos/components/ngx-graph-org-tree/ngx-graph-org-tree.component.html
+++ b/src/docs/demos/components/ngx-graph-org-tree/ngx-graph-org-tree.component.html
@@ -37,5 +37,10 @@
       <textPath class="text-path" [attr.href]="'#' + link.id" [style.dominant-baseline]="link.dominantBaseline" startOffset="50%">{{link.label}}</textPath>
     </svg:text>
   </svg:g>
+  <svg:g class="linkMidpoint" *ngIf="link.midPoint"
+         [attr.transform]="'translate(' + (link.midPoint.x) + ',' + (link.midPoint.y) + ')'">
+    <ellipse rx="30" ry="10" />
+    <svg:text alignment-baseline="central">{{ link.data.linkText }}</svg:text>
+</svg:g>
 </ng-template>
 </ngx-graph>
