--- a/src/docs/demos/components/ngx-graph-org-tree/ngx-graph-org-tree.component.scss
+++ b/src/docs/demos/components/ngx-graph-org-tree/ngx-graph-org-tree.component.scss
@@ -20,4 +20,19 @@
             margin-bottom: 8px;
         }
     }
+
+    .linkMidpoint {
+        ellipse {
+          fill:white;
+          stroke: black;
+          stroke-width: 1;
+        }
+    
+        text {
+          stroke: transparent;
+          fill:black;
+          text-anchor: middle; 
+          font-size: 10px;
+        }
+      }
 }
