Migration from ngx-chart dependency to built-in features

--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
@@ -1,4 +1,4 @@
-<ngx-charts-chart
+<ngx-graph-wrapper
   [view]="[width, height]"
   [showLegend]="legend"
   [legendOptions]="legendOptions"
@@ -100,4 +100,4 @@
       </svg:g>
     </svg:g>
   </svg:g>
-</ngx-charts-chart>
+</ngx-graph-wrapper>
