Contain graph inside bounds while panning

--- a/src/docs/demos/components/ngx-graph-custom-curve/ngx-graph-custom-curve.component.html
+++ b/src/docs/demos/components/ngx-graph-custom-curve/ngx-graph-custom-curve.component.html
@@ -1,8 +1,38 @@
 <ngx-graph
   class="chart-container"
-  [view]="[500, 300]"
-  [links]="links"
-  [nodes]="nodes"
-  [layout]="layout"
-  [curve]="curve">
+  [links]="hierarchialGraph.links"
+  [nodes]="hierarchialGraph.nodes"
+  [legend]="true"
+  [curve]="curve"
+  [draggingEnabled]="false"
+>
+  <ng-template #defsTemplate>
+    <svg:marker id="arrow" viewBox="0 -5 10 10" refX="8" refY="0" markerWidth="4" markerHeight="4" orient="auto">
+      <svg:path d="M0,-5L10,0L0,5" class="arrow-head" />
+    </svg:marker>
+  </ng-template>
+
+  <ng-template #nodeTemplate let-node>
+    <svg:g class="node" ngx-tooltip [tooltipPlacement]="'top'" [tooltipType]="'tooltip'" [tooltipTitle]="node.title">
+      <svg:rect
+        [attr.width]="node.dimension.width"
+        [attr.height]="node.dimension.height"
+        [attr.fill]="node.data.color"
+      />
+      <svg:text alignment-baseline="central" [attr.x]="10" [attr.y]="node.dimension.height / 2">
+        {{ node.label }}
+      </svg:text>
+    </svg:g>
+  </ng-template>
+
+  <ng-template #linkTemplate let-link>
+    <svg:g class="edge">
+      <svg:path class="line" stroke-width="2" marker-end="url(#arrow)"></svg:path>
+      <svg:text class="edge-label" text-anchor="middle">
+        <textPath style="fill: #666;" [attr.href]="'#' + link.id" startOffset="60%">
+          {{ link.label }}
+        </textPath>
+      </svg:text>
+    </svg:g>
+  </ng-template>
 </ngx-graph>
