Implement minimap prototype

--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
@@ -101,4 +101,56 @@
       </svg:g>
     </svg:g>
   </svg:g>
+
+  <svg:clipPath id="minimapClip">
+    <svg:rect
+      [attr.width]="graphDims.width / minimapScaleCoefficient"
+      [attr.height]="graphDims.height / minimapScaleCoefficient"
+    ></svg:rect>
+  </svg:clipPath>
+
+  <svg:g class="minimap" clip-path="url(#minimapClip)">
+    <svg:rect
+      class="minimap-background"
+      [attr.width]="graphDims.width / minimapScaleCoefficient"
+      [attr.height]="graphDims.height / minimapScaleCoefficient"
+    ></svg:rect>
+
+    <svg:g class="minimap-nodes" [style.transform]="'scale(' + 1 / minimapScaleCoefficient + ')'">
+      <svg:g
+        #nodeElement
+        *ngFor="let node of graph.nodes; trackBy: trackNodeBy"
+        class="node-group"
+        [class.old-node]="animate && oldNodes.has(node.id)"
+        [id]="node.id"
+        [attr.transform]="node.transform"
+      >
+        <ng-template
+          *ngIf="nodeTemplate"
+          [ngTemplateOutlet]="nodeTemplate"
+          [ngTemplateOutletContext]="{ $implicit: node }"
+        ></ng-template>
+        <svg:circle
+          *ngIf="!nodeTemplate"
+          r="10"
+          [attr.cx]="node.dimension.width / 2 / minimapScaleCoefficient"
+          [attr.cy]="node.dimension.height / 2 / minimapScaleCoefficient"
+          [attr.fill]="node.data?.color"
+        />
+      </svg:g>
+    </svg:g>
+
+    <svg:rect
+      [attr.transform]="
+        'translate(' +
+        panOffsetX / zoomLevel / -minimapScaleCoefficient +
+        ',' +
+        panOffsetY / zoomLevel / -minimapScaleCoefficient +
+        ')'
+      "
+      class="minimap-drag"
+      [attr.width]="width / minimapScaleCoefficient / zoomLevel"
+      [attr.height]="height / minimapScaleCoefficient / zoomLevel"
+    ></svg:rect>
+  </svg:g>
 </ngx-charts-chart>
