--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.scss
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.scss
@@ -1,3 +1,22 @@
+.minimap {
+  .minimap-background {
+    fill: rgba(0, 0, 0, 0.1);
+  }
+
+  .minimap-drag {
+    fill: rgba(0, 0, 0, 0.2);
+    stroke: rgba(255, 255, 255, 1);
+    stroke-width: 1px;
+    stroke-dasharray: 2px;
+    stroke-dashoffset: 2px;
+  }
+
+  .minimap-nodes {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+}
+
 .graph {
   user-select: none;
 
