mini map surrounding  code, contains the following:
1. input binding for enable\disable
2. New template for mini map nodes.
3. Input binding for min map max width
4. Input binding for location of the map - for now supporting only Upper left and Upper right

--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
@@ -109,7 +109,7 @@
     ></svg:rect>
   </svg:clipPath>
 
-  <svg:g class="minimap" clip-path="url(#minimapClip)">
+  <svg:g class="minimap" *ngIf="showMiniMap" [attr.transform]="getMinimapTransform()"  clip-path="url(#minimapClip)">
     <svg:rect
       class="minimap-background"
       [attr.width]="graphDims.width / minimapScaleCoefficient"
@@ -126,12 +126,17 @@
         [attr.transform]="node.transform"
       >
         <ng-template
-          *ngIf="nodeTemplate"
+          *ngIf="miniMapNodeTemplate"
+          [ngTemplateOutlet]="miniMapNodeTemplate"
+          [ngTemplateOutletContext]="{ $implicit: node }"
+        ></ng-template>
+        <ng-template
+          *ngIf="!miniMapNodeTemplate && nodeTemplate"
           [ngTemplateOutlet]="nodeTemplate"
           [ngTemplateOutletContext]="{ $implicit: node }"
         ></ng-template>
         <svg:circle
-          *ngIf="!nodeTemplate"
+          *ngIf="!nodeTemplate && !miniMapNodeTemplate"
           r="10"
           [attr.cx]="node.dimension.width / 2 / minimapScaleCoefficient"
           [attr.cy]="node.dimension.height / 2 / minimapScaleCoefficient"
