--- a/src/docs/demos/components/ngx-graph-custom-curve/ngx-graph-custom-curve.component.html
+++ b/src/docs/demos/components/ngx-graph-custom-curve/ngx-graph-custom-curve.component.html
@@ -1,8 +1,9 @@
 <ngx-graph
   class="chart-container"
-  [view]="[500, 300]"
+  [view]="[800, 300]"
   [links]="links"
   [nodes]="nodes"
   [layout]="layout"
-  [curve]="curve">
+  [curve]="curve"
+>
 </ngx-graph>
