Add click to pan feature

--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
@@ -119,6 +119,7 @@
       class="minimap-background"
       [attr.width]="graphDims.width / minimapScaleCoefficient"
       [attr.height]="graphDims.height / minimapScaleCoefficient"
+      (mousedown)="onMinimapPanTo($event)"
     ></svg:rect>
 
     <svg:g
