Add Minimap feature (#324)
* Implement minimap prototype

* mini map surrounding  code, contains the following:

1. input binding for enable\disable
2. New template for mini map nodes.
3. Input binding for min map max width
4. Input binding for location of the map - for now supporting only Upper left and Upper right

* Remove minimap transform calculation from html

* Update minimap implementation

* Fixes

* Add click to pan feature

* Clean up

* Add inputs to main docs

Co-authored-by: assafsun <assaf.sun@gmil.com>
Co-authored-by: ashem <ashem@microsoft.com>

--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.scss
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.scss
@@ -1,3 +1,27 @@
+.minimap {
+  .minimap-background {
+    fill: rgba(0, 0, 0, 0.1);
+  }
+
+  .minimap-drag {
+    fill: rgba(0, 0, 0, 0.2);
+    stroke: rgba(255, 255, 255, 1);
+    stroke-width: 1px;
+    stroke-dasharray: 2px;
+    stroke-dashoffset: 2px;
+    cursor: pointer;
+
+    &.panning {
+      fill: rgba(0, 0, 0, 0.3);
+    }
+  }
+
+  .minimap-nodes {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+}
+
 .graph {
   user-select: none;
 
