remove unused parameter

--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
@@ -172,7 +172,7 @@
         [class.panning]="isMinimapPanning"
         [attr.width]="width / minimapScaleCoefficient / zoomLevel"
         [attr.height]="height / minimapScaleCoefficient / zoomLevel"
-        (mousedown)="onMinimapDragMouseDown($event)"
+        (mousedown)="onMinimapDragMouseDown()"
       ></svg:rect>
     </svg:g>
   </svg:g>
